# mbxai-srv-helloworld

./: README.md  docker-compose.yml  pyproject.toml
kubernetes/: mbxai-resource.yaml
src/mbxai_srv_hello_world/: __init__.py  config.py
src/mbxai_srv_hello_world/api/: __init__.py  run.py  server.py
src/mbxai_srv_hello_world/clients/: mcp.py  openrouter.py
src/mbxai_srv_hello_world/project/: __init__.py
tests/: __init__.py
