[project]
name = "mbxai_srv_hello_world"
version = "0.1.0"
description = "An AI Service that can be launched in the Mibexx AI Orchestrator to expose ai features"
authors = [{ name = "Mike Bertram", email = "contact@mibexx.de" }]
readme = "README.md"
packages = [
    { include = "src" }
]
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.0",
    "openai>=1.66.0",
    "mcp>=0.1.0",
    ]

[project.scripts]
service = "src.mbxai_srv_hello_world.api.run:main"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I"]

